kubernetes/apps/networking/ingress-traefik/proxies/nas.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: networking
spec:
  type: ExternalName
  externalName: "nas.${INTERNAL_DOMAIN}"
  ports:
    - name: jellyfin
      protocol: TCP
      port: 8096
    - name: navidrome
      protocol: TCP
      port: 4533
    - name: registry
      protocol: TCP
      port: 15000
    - name: sabnzbd
      protocol: TCP
      port: 8088
    - name: synology
      protocol: TCP
      port: 5999
    - name: betanin
      protocol: TCP
      port: 9393
