kubernetes/apps/networking/ingress-traefik/proxies/betanin.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/preserve-host: "true"
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
    hajimari.io/icon: "download"
    hajimari.io/group: "media"
  name: betanin
  namespace: networking
spec:
  ingressClassName: ingress-traefik
  rules:
    - host: &host "betanin.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: nas
                port:
                  name: betanin
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
