kubernetes/apps/networking/ingress-traefik/proxies/jellyfin.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.${SECRET_DOMAIN}`)
      services:
        - kind: Service
          name: nas
          passHostHeader: true
          port: 8096
          scheme: http
  tls:
    secretName: "${SECRET_DOMAIN/./-}-production-tls"
