kubernetes/apps/networking/ingress-traefik/proxies/registry.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/preserve-host: "true"
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
  name: registry
  namespace: networking
spec:
  ingressClassName: ingress-traefik
  rules:
    - host: &host "registry.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: nas
                port:
                  name: registry
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
