kubernetes/apps/networking/ingress-traefik/proxies/turris.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/preserve-host: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-lan-only@kubernetescrd"
    hajimari.io/group: "homelab"
    hajimari.io/icon: mdi:router-network
  name: router
  namespace: networking
spec:
  ingressClassName: ingress-traefik
  rules:
    - host: &host "router.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: router
                port:
                  name: webui
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  namespace: networking
spec:
  ingressClassName: ingress-traefik
  rules:
    - host: &host "adguard.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: router
                port:
                  name: adguard-home
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Service
metadata:
  name: router
  namespace: networking
spec:
  ports:
    - name: webui
      port: 81
      protocol: TCP
      targetPort: 81
    - name: adguard-home
      port: 8080
      protocol: TCP
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: router
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.1.1
    ports:
      - name: webui
        port: 81
        protocol: TCP
      - name: adguard-home
        port: 8080
        protocol: TCP
